# GiftAdvisor

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py  views.py
core/management/commands/: clear_data.py  generate_fake_data.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_giftidea_status.py  0004_giftidea_image_url.py  0005_userpreferences.py  0006_remove_userpreferences_encrypted_openai_key_and_more.py  0007_userpreferences_current_ai_model_and_more.py  0008_userpreferences_deepseek_model_and_more.py  0009_purchaserecord.py  0010_giftidea_notes.py
core/services/: ai_processor.py  metadata_extractor.py
docs/: class_diagram.md  design_patterns.md
static/js/: dashboard.js  gift_detail.js  recipient_profile.js  recipients.js
templates/: base.html  dashboard.html  gift_detail.html  index.html  preferences.html  purchases.html  recipient_profile.html  recipients.html
templates/account/: login.html
templates/includes/: modal_delete_confirmation.html  search_bar.html  sidebar.html  toast_notifications.html  view_toggle.html
users/: adapters.py  models.py
users/migrations/: 0001_initial.py
